# Document-Query-System-with-LLM-based-RAG

./: .gitignore  Dockerfile  Makefile  README.md  bm25_encoder  config.py  main.py  pyproject.toml  requirements.txt  run_rag_eval.py  s3_storage.py  samconfig.toml  stremlit_app.py  template.yml
.aws-sam/: build.toml
.github/workflows/: deploy.yml
src/: client.py  common.py  prompt.py  schema.py
