[project]
name = "project-2-production-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.68",
    "cohere>=5.20.7",
    "faiss-cpu>=1.13.2",
    "fastapi[standard]>=0.135.1",
    "langchain-cohere>=0.5.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.1",
    "nltk>=3.9.3",
    "pinecone>=8.1.0",
    "pinecone-text>=0.11.0",
    "pydantic>=2.12.5",
    "pypdf>=6.7.4",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "streamlit>=1.54.0",
    "uvicorn>=0.41.0",
]
